[gd_scene load_steps=45 format=3 uid="uid://cs1k22tdf04k4"]

[ext_resource type="Script" path="res://scripts/robot.gd" id="1_inxuc"]
[ext_resource type="PackedScene" uid="uid://div25sd40yx1d" path="res://scenes/TutorialAsset/player/model/player.glb" id="2"]
[ext_resource type="Texture2D" uid="uid://o1nd7djiihf1" path="res://scenes/TutorialAsset/player/textures/player_robot_albedo.png" id="3_cgljo"]
[ext_resource type="AudioStream" uid="uid://do3ko5enqvvrb" path="res://scenes/TutorialAsset/player/audio/step_random_pitch.tres" id="4"]
[ext_resource type="AudioStream" uid="uid://evwr35k4yn6g" path="res://scenes/TutorialAsset/player/audio/jump.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://fbnqspetw2oy" path="res://scenes/TutorialAsset/player/audio/land.wav" id="6"]
[ext_resource type="Material" uid="uid://byb8a73wgvytk" path="res://scenes/TutorialAsset/player/bullet/bullet_material.tres" id="9"]
[ext_resource type="ArrayMesh" uid="uid://pok2ib14r47b" path="res://scenes/TutorialAsset/player/model/muzzle_flash_particle_mesh_Cone.mesh" id="10"]
[ext_resource type="Texture2D" uid="uid://dj46di0ip66q5" path="res://scenes/TutorialAsset/player/bullet/effect/FlarePolar.png" id="11"]
[ext_resource type="AudioStream" uid="uid://glpjepixvmdl" path="res://scenes/TutorialAsset/player/audio/shoot.wav" id="11_cqsut"]
[ext_resource type="PackedScene" uid="uid://bdg0cdj3obokk" path="res://scenes/healthbar.tscn" id="11_r1fay"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tk4rn"]
albedo_texture = ExtResource("3_cgljo")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7k1q5"]
albedo_texture = ExtResource("3_cgljo")

[sub_resource type="SphereMesh" id="2"]
radius = 0.003
height = 0.02

[sub_resource type="StandardMaterial3D" id="3"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("11")

[sub_resource type="Curve" id="6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.791139, 0.990909), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="AnimationNodeAdd3" id="9"]
resource_local_to_scene = true
filter_enabled = true
filters = ["Robot_Skeleton/Skeleton3D:neck.001", "Robot_Skeleton/Skeleton3D:upper_arm.R"]

[sub_resource type="AnimationNodeAnimation" id="10"]
resource_local_to_scene = true
animation = &"AIM-Down"

[sub_resource type="AnimationNodeAnimation" id="11"]
resource_local_to_scene = true
animation = &"AIM-Up"

[sub_resource type="AnimationNodeBlend2" id="12"]
resource_local_to_scene = true
filter_enabled = true
filters = ["Robot_Skeleton/Skeleton3D:eyelid.d.L", "Robot_Skeleton/Skeleton3D:eyelid.d.R", "Robot_Skeleton/Skeleton3D:eyelid.u.L", "Robot_Skeleton/Skeleton3D:eyelid.u.R", "Robot_Skeleton/Skeleton3D:eyes"]

[sub_resource type="AnimationNodeAnimation" id="13"]
resource_local_to_scene = true
animation = &"eyes"

[sub_resource type="AnimationNodeAnimation" id="14"]
resource_local_to_scene = true
animation = &"jump_5_hardlanding"

[sub_resource type="AnimationNodeAnimation" id="15"]
resource_local_to_scene = true
animation = &"jump_4_falling"

[sub_resource type="AnimationNodeAnimation" id="16"]
resource_local_to_scene = true
animation = &"jump_2_upwards"

[sub_resource type="AnimationNodeOneShot" id="17"]
resource_local_to_scene = true
fadein_time = 0.25
fadeout_time = 0.25
autorestart_random_delay = 1.0

[sub_resource type="AnimationNodeTransition" id="18"]
resource_local_to_scene = true
xfade_time = 0.2
input_0/name = "strafe"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "walk"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "jump_up"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "jump_down"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true

[sub_resource type="AnimationNodeAnimation" id="19"]
resource_local_to_scene = true
animation = &"strafe_left"

[sub_resource type="AnimationNodeAnimation" id="20"]
resource_local_to_scene = true
animation = &"strafe_right"

[sub_resource type="AnimationNodeAnimation" id="21"]
resource_local_to_scene = true
animation = &"strafe_back"

[sub_resource type="AnimationNodeAnimation" id="22"]
resource_local_to_scene = true
animation = &"strafe_front"

[sub_resource type="AnimationNodeAnimation" id="23"]
resource_local_to_scene = true
animation = &"Idlecombat"

[sub_resource type="AnimationNodeBlendSpace2D" id="24"]
resource_local_to_scene = true
blend_point_0/node = SubResource("19")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("20")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("21")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("22")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("23")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeTimeScale" id="37"]

[sub_resource type="AnimationNodeAnimation" id="25"]
resource_local_to_scene = true
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="26"]
resource_local_to_scene = true
animation = &"running_nogun"

[sub_resource type="AnimationNodeAnimation" id="27"]
resource_local_to_scene = true
animation = &"running_gun"

[sub_resource type="AnimationNodeAnimation" id="28"]
resource_local_to_scene = true
animation = &"Idlecombat"

[sub_resource type="AnimationNodeBlendSpace2D" id="29"]
resource_local_to_scene = true
blend_point_0/node = SubResource("25")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("26")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("27")
blend_point_2/pos = Vector2(1, 1)
blend_point_3/node = SubResource("28")
blend_point_3/pos = Vector2(0, 1)
min_space = Vector2(0, 0)
x_label = "speed"
y_label = "gun"

[sub_resource type="AnimationNodeTimeScale" id="36"]

[sub_resource type="AnimationNodeBlendTree" id="30"]
resource_local_to_scene = true
graph_offset = Vector2(-177.743, 406.393)
nodes/aim/node = SubResource("9")
nodes/aim/position = Vector2(1120, 1240)
nodes/aimdown/node = SubResource("10")
nodes/aimdown/position = Vector2(140, 580)
nodes/aimup/node = SubResource("11")
nodes/aimup/position = Vector2(140, 380)
nodes/eye_blend/node = SubResource("12")
nodes/eye_blend/position = Vector2(1340, 1220)
nodes/eyes/node = SubResource("13")
nodes/eyes/position = Vector2(140, 580)
nodes/hardland/node = SubResource("14")
nodes/hardland/position = Vector2(140, 780)
nodes/jumpdown/node = SubResource("15")
nodes/jumpdown/position = Vector2(140, 980)
nodes/jumpup/node = SubResource("16")
nodes/jumpup/position = Vector2(140, 1180)
nodes/land/node = SubResource("17")
nodes/land/position = Vector2(880, 1300)
nodes/output/position = Vector2(1560, 1220)
nodes/state/node = SubResource("18")
nodes/state/position = Vector2(680, 1340)
nodes/strafe/node = SubResource("24")
nodes/strafe/position = Vector2(140, 1400)
nodes/strafe_speed/node = SubResource("37")
nodes/strafe_speed/position = Vector2(440, 1360)
nodes/walk/node = SubResource("29")
nodes/walk/position = Vector2(140, 1640)
nodes/walk_speed/node = SubResource("36")
nodes/walk_speed/position = Vector2(440, 1600)
node_connections = [&"aim", 0, &"aimdown", &"aim", 1, &"land", &"aim", 2, &"aimup", &"eye_blend", 0, &"aim", &"eye_blend", 1, &"eyes", &"land", 0, &"state", &"land", 1, &"hardland", &"output", 0, &"eye_blend", &"state", 0, &"strafe_speed", &"state", 1, &"walk_speed", &"state", 2, &"jumpup", &"state", 3, &"jumpdown", &"strafe_speed", 0, &"strafe", &"walk_speed", 0, &"walk"]

[sub_resource type="SeparationRayShape3D" id="32"]

[sub_resource type="AudioStreamRandomizer" id="35"]
streams_count = 1
stream_0/stream = ExtResource("11_cqsut")

[sub_resource type="ViewportTexture" id="ViewportTexture_tfqnt"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CapsuleShape3D" id="31"]

[node name="Robot" type="CharacterBody3D"]
collision_layer = 6
collision_mask = 7
script = ExtResource("1_inxuc")

[node name="PlayerModel" parent="." instance=ExtResource("2")]

[node name="Robot_Skeleton" parent="PlayerModel" index="0"]
transform = Transform3D(0.803991, 0, 0, 0, 0.803991, 0, 0, 0, 0.803991, 0, 0, 0)

[node name="Skeleton3D" parent="PlayerModel/Robot_Skeleton" index="0"]
bones/1/position = Vector3(0.10781, 2.22786, -0.182374)
bones/1/rotation = Quaternion(0.191857, -0.0397536, -0.000651397, 0.980617)
bones/2/position = Vector3(3.32581e-05, 0.241671, -0.000702761)
bones/2/rotation = Quaternion(-0.0441774, 0.0942094, -0.0239484, 0.994283)
bones/3/position = Vector3(3.33424e-05, 0.104924, -7.19893e-05)
bones/3/rotation = Quaternion(-0.0527859, 0.0970797, -0.00494762, 0.993864)
bones/4/position = Vector3(3.32473e-05, 0.119768, 0.00063657)
bones/4/rotation = Quaternion(0.0101155, 0.0967899, 0.00898105, 0.995213)
bones/5/position = Vector3(-1.11057e-08, 0.326493, -9.43907e-06)
bones/5/rotation = Quaternion(0.180714, -0.000141851, -0.00312332, 0.983531)
bones/6/rotation = Quaternion(-0.0574519, 0.866156, 0.490601, 0.0760435)
bones/7/position = Vector3(-1.72301e-10, -0.000460288, -0.00998253)
bones/7/rotation = Quaternion(-0.00504286, 0.706908, 0.707288, -0.000164917)
bones/8/rotation = Quaternion(0.965926, 2.24696e-08, 1.45903e-07, 0.258819)
bones/9/position = Vector3(-3.65845e-09, 0.255096, 0.039909)
bones/10/position = Vector3(-1.07326e-08, 0.245584, 0.126631)
bones/11/rotation = Quaternion(4.1604e-07, 0.930597, 0.366045, -5.70056e-07)
bones/12/rotation = Quaternion(4.16802e-07, 0.930597, 0.366045, -5.69411e-07)
bones/13/rotation = Quaternion(0.0442984, 0.958142, -0.282457, 0.0147929)
bones/14/rotation = Quaternion(2.10611e-07, 0.959165, -0.282846, -7.2077e-07)
bones/15/rotation = Quaternion(-0.324081, -0.359402, -0.430442, 0.76192)
bones/16/rotation = Quaternion(-0.572554, -0.0599775, -0.139312, 0.805715)
bones/17/rotation = Quaternion(-0.111793, 0.0101238, -0.153962, 0.98168)
bones/18/rotation = Quaternion(-0.123664, -0.000620748, -0.137524, 0.982748)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-0.000719559, 0.000711024, 0.999138, -0.0414941)
bones/20/rotation = Quaternion(-0.0276485, -0.0145123, 0.990118, 0.136718)
bones/21/rotation = Quaternion(7.36457e-07, 3.86686e-06, -5.92152e-08, 1)
bones/22/rotation = Quaternion(-0.113614, -0.0318652, 0.000649787, 0.993014)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-0.201327, -0.0201354, -0.00234235, 0.979314)
bones/24/rotation = Quaternion(-0.325186, -0.119635, -0.00172931, 0.93805)
bones/25/rotation = Quaternion(-0.34442, -0.0732135, -0.0150711, 0.935835)
bones/25/scale = Vector3(0.91118, 0.91118, 0.91118)
bones/27/rotation = Quaternion(-0.0473379, 0.0473384, -0.705523, 0.705518)
bones/28/rotation = Quaternion(0.000112596, -0.00796851, 0.465932, 0.884785)
bones/28/scale = Vector3(0.999995, 1.00001, 1)
bones/29/rotation = Quaternion(0.00420373, 0.00610656, 0.137006, 0.990542)
bones/29/scale = Vector3(1.00001, 0.99999, 1)
bones/30/rotation = Quaternion(-0.000126306, -0.00407753, 0.523223, 0.852186)
bones/30/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(7.54865e-07, 3.871e-06, 0.00634164, 0.99998)
bones/33/rotation = Quaternion(-0.112505, -0.0220749, -0.00748103, 0.993378)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(-0.258214, -0.0230986, -0.00291056, 0.965807)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(-0.378048, -0.11934, -0.0085355, 0.918022)
bones/36/rotation = Quaternion(-0.395448, -0.0697753, -0.024852, 0.915497)
bones/36/scale = Vector3(0.870764, 0.870764, 0.870764)
bones/38/rotation = Quaternion(7.41766e-07, 3.87221e-06, -2.75917e-07, 1)
bones/39/rotation = Quaternion(-0.0878372, -0.0117187, -0.00191995, 0.996064)
bones/40/rotation = Quaternion(-0.342797, -0.0144764, -0.00725157, 0.93927)
bones/41/rotation = Quaternion(-0.485406, -0.117456, -0.0227844, 0.866063)
bones/42/rotation = Quaternion(-0.456274, -0.0708214, -0.0239107, 0.886694)
bones/42/scale = Vector3(0.77851, 0.77851, 0.77851)
bones/45/rotation = Quaternion(0.185368, -0.127189, 0.96663, 0.12283)
bones/47/rotation = Quaternion(-0.168289, 0.0626287, -0.387513, 0.904207)
bones/48/rotation = Quaternion(0.0926032, 0.131267, 0.3633, 0.917718)
bones/49/rotation = Quaternion(-0.203972, -0.0313362, -0.405853, 0.890335)
bones/50/rotation = Quaternion(-0.337859, 0.370749, 0.437762, 0.746164)
bones/51/rotation = Quaternion(-0.650162, 0.0476183, -0.257055, 0.713403)
bones/52/position = Vector3(-1.4302e-09, 0.250038, 1.97919e-07)
bones/52/rotation = Quaternion(-0.0567662, -0.0326174, 0.464279, 0.883266)
bones/53/rotation = Quaternion(-0.0686867, 0.0103374, 0.423817, 0.903081)
bones/53/scale = Vector3(1.00345, 1.00345, 1.00345)
bones/54/position = Vector3(-0.0193486, 0.120204, 0.0407552)
bones/55/rotation = Quaternion(0.0015298, -0.0653359, 0.997819, 0.00923565)
bones/56/rotation = Quaternion(0.0175249, -0.017539, 0.996388, 0.0812222)
bones/56/scale = Vector3(0.989954, 0.989954, 0.989954)
bones/58/rotation = Quaternion(-0.158956, 0.0297048, 0.0253501, 0.986513)
bones/58/scale = Vector3(1, 1, 0.99999)
bones/59/rotation = Quaternion(-0.260769, 0.0251908, 0.010261, 0.965018)
bones/59/scale = Vector3(1.00001, 0.999999, 0.99999)
bones/60/rotation = Quaternion(-0.338934, 0.113367, -0.053976, 0.932394)
bones/60/scale = Vector3(1.00003, 0.999986, 0.999971)
bones/61/rotation = Quaternion(-0.432364, 0.071436, 0.0220058, 0.898595)
bones/61/scale = Vector3(0.875465, 0.875465, 0.875465)
bones/63/rotation = Quaternion(-0.15161, -0.151194, 0.674203, 0.706828)
bones/64/rotation = Quaternion(8.78455e-05, 0.00788268, -0.512085, 0.858899)
bones/64/scale = Vector3(0.999964, 1.00002, 1)
bones/65/rotation = Quaternion(0.00393461, -0.00597093, -0.148322, 0.988913)
bones/65/scale = Vector3(0.999961, 1.00004, 0.999999)
bones/66/rotation = Quaternion(-0.000375601, 0.00403938, -0.572048, 0.82021)
bones/66/scale = Vector3(0.996911, 0.996911, 0.996911)
bones/69/rotation = Quaternion(-0.117914, 0.0307556, 0.0305434, 0.992077)
bones/69/scale = Vector3(1, 1, 0.99999)
bones/70/rotation = Quaternion(-0.324295, 0.0261144, 0.0110822, 0.94553)
bones/70/scale = Vector3(1.00001, 0.999998, 0.999988)
bones/71/rotation = Quaternion(-0.42688, 0.109664, -0.0673892, 0.895101)
bones/71/scale = Vector3(1.00003, 0.99997, 0.999986)
bones/72/rotation = Quaternion(-0.459227, 0.0678425, 0.0297255, 0.885225)
bones/72/scale = Vector3(0.804094, 0.804094, 0.804094)
bones/75/rotation = Quaternion(-0.500878, 0.0695105, 0.0274896, 0.862284)
bones/75/scale = Vector3(0.728114, 0.728114, 0.728114)
bones/77/rotation = Quaternion(-0.0904894, 0.0335514, 0.0244113, 0.995033)
bones/77/scale = Vector3(1, 1, 0.999991)
bones/78/rotation = Quaternion(-0.39223, 0.0273627, 0.0122632, 0.919378)
bones/78/scale = Vector3(1.00001, 0.999996, 0.999989)
bones/79/rotation = Quaternion(-0.509419, 0.105278, -0.0794851, 0.850348)
bones/79/scale = Vector3(1.00002, 0.999946, 1.00001)
bones/81/rotation = Quaternion(-0.150284, -0.090912, 0.979987, 0.0936792)
bones/81/scale = Vector3(1.00003, 0.999998, 0.999962)
bones/82/scale = Vector3(0.806007, 0.723313, 0.806006)
bones/84/rotation = Quaternion(0.499984, -0.499985, 0.500014, 0.500017)
bones/85/position = Vector3(-0.0039065, 0.0527363, 0.0957321)
bones/85/rotation = Quaternion(0.499984, -0.499985, 0.500014, 0.500017)
bones/86/position = Vector3(-0.00391032, 0.0565452, -0.0935266)
bones/86/rotation = Quaternion(0.499984, -0.499985, 0.500014, 0.500017)
bones/88/position = Vector3(-0.000285607, -1.42184e-06, 0.119667)
bones/89/rotation = Quaternion(-1.7506e-05, 0.00750475, 0.999972, -3.46659e-05)
bones/90/position = Vector3(-5.17157e-06, 0.109669, -0.0266081)
bones/91/position = Vector3(0.000285683, 1.38812e-06, -0.119667)
bones/92/position = Vector3(-4.48707e-06, 0.000595451, 0.0266991)
bones/95/rotation = Quaternion(-0.396738, 0.00701892, -0.214902, 0.892394)
bones/96/rotation = Quaternion(0.135698, -0.0636261, -0.610424, 0.777766)
bones/97/rotation = Quaternion(-0.314452, 0.0429245, 0.0457973, 0.947196)
bones/98/rotation = Quaternion(0.998317, -0.0562804, 0.00981147, 0.00994792)
bones/99/rotation = Quaternion(0.625019, 0.261793, 0.621693, -0.392828)
bones/100/rotation = Quaternion(-0.0637016, -0.132932, 0.860893, 0.486964)
bones/101/rotation = Quaternion(-0.0912402, -0.0838117, 0.801689, 0.584761)
bones/102/rotation = Quaternion(0.241316, 0.825562, -0.508253, -0.0435085)
bones/103/rotation = Quaternion(0.0624888, -0.0435551, 0.0401602, 0.996286)
bones/104/rotation = Quaternion(-0.714796, 0.129017, 0.469533, 0.501956)
bones/105/rotation = Quaternion(0.0901592, -0.183456, 0.932629, -0.297352)
bones/106/rotation = Quaternion(0.172831, -0.188595, 0.961031, -0.104786)
bones/107/rotation = Quaternion(-0.289405, 0.735445, -0.597448, -0.135729)
bones/108/rotation = Quaternion(0.0291049, 0.0536995, -0.000488913, 0.998133)
bones/109/rotation = Quaternion(0.997678, 1.55608e-10, -9.53118e-10, -0.0681111)
bones/110/rotation = Quaternion(0.996834, -1.69336e-09, -1.05908e-09, -0.0795101)
bones/111/rotation = Quaternion(0.996834, -7.12178e-10, -1.37154e-10, -0.07951)
bones/112/rotation = Quaternion(0.995967, 0.0724517, 0.00204807, -0.052874)
bones/113/rotation = Quaternion(0.997761, -0.0357782, -0.00680549, -0.0561023)
bones/114/position = Vector3(0.12195, 0.103847, 0.116026)
bones/114/rotation = Quaternion(0.0597929, 0.737493, 0.669673, -0.0637683)
bones/115/position = Vector3(-0.0797552, 0.109035, 0.135591)
bones/115/rotation = Quaternion(0.0672706, 0.73879, 0.6685, -0.0526575)
bones/116/rotation = Quaternion(0.902487, 0.0614715, -0.0529917, 0.423001)
bones/116/scale = Vector3(1, 1.00001, 1)
bones/117/rotation = Quaternion(0.191859, -3.77255e-08, 4.0249e-08, 0.981423)
bones/117/scale = Vector3(1, 1, 0.999994)
bones/118/rotation = Quaternion(0.0958538, 1.11853e-09, 1.84089e-09, 0.995395)
bones/118/scale = Vector3(1.03336, 1.03336, 1.03336)
bones/119/position = Vector3(1.42587e-08, 0.4473, -2.29773e-08)
bones/119/rotation = Quaternion(-0.513393, -0.0954121, 0.00788542, 0.852797)
bones/119/scale = Vector3(1, 1, 1)
bones/120/rotation = Quaternion(1.67132e-08, 0.959381, -0.282113, -4.06474e-08)
bones/121/rotation = Quaternion(-0.384436, 7.88953e-10, -4.0391e-09, 0.923152)
bones/122/position = Vector3(-1.10519e-07, 0.0866694, -0.124063)
bones/122/rotation = Quaternion(0.990506, 1.8869e-07, -2.84697e-09, 0.137472)
bones/122/scale = Vector3(1, 1, 1.00005)
bones/123/position = Vector3(-3.12417e-09, 0.0552025, -0.129837)
bones/124/rotation = Quaternion(0.977264, 0.00785913, -0.00239363, 0.211866)
bones/124/scale = Vector3(1, 1.00001, 1)
bones/125/rotation = Quaternion(0.349638, -1.19393e-07, 2.83863e-07, 0.936885)
bones/125/scale = Vector3(1, 1, 0.999998)
bones/126/rotation = Quaternion(0.182628, -1.57057e-09, 1.93905e-09, 0.983182)
bones/126/scale = Vector3(1.00534, 1.00534, 1.00534)
bones/127/position = Vector3(0.0175439, 0.447091, -0.00175865)
bones/127/rotation = Quaternion(-0.609548, 0.0938, -0.0291878, 0.786639)
bones/127/scale = Vector3(1, 1, 1)
bones/128/rotation = Quaternion(1.54255e-08, 0.940444, -0.339948, -4.10211e-08)
bones/129/rotation = Quaternion(-0.384436, -5.86263e-10, 2.3708e-09, 0.923152)
bones/130/position = Vector3(1.00874e-07, 0.0881677, -0.124194)
bones/130/rotation = Quaternion(0.968817, -1.20551e-07, 8.73059e-09, 0.247776)
bones/130/scale = Vector3(1, 1, 1.00006)
bones/131/position = Vector3(-6.64836e-09, 0.0616559, -0.129528)
bones/132/position = Vector3(0.187792, 1.84115, 1.06563)
bones/133/position = Vector3(-0.087999, 1.84115, 1.06563)
bones/134/position = Vector3(0.324649, 1.39822, 0.0465769)
bones/135/position = Vector3(-0.0882371, 1.66895, -0.432799)
bones/135/rotation = Quaternion(0.998099, -2.22234e-10, 0.0616301, 3.59907e-09)
bones/136/position = Vector3(2.30401, 2.89943, 6.73811)
bones/137/position = Vector3(0.556991, 2.38267, -0.379165)
bones/137/rotation = Quaternion(-0.707078, 0.00643217, -0.00643216, 0.707078)
bones/138/position = Vector3(0.482403, 2.7301, -0.400268)
bones/139/position = Vector3(-0.311186, 2.47511, 0.153247)
bones/139/rotation = Quaternion(-0.707078, 0.00643217, -0.00643216, 0.707078)
bones/140/position = Vector3(-0.508545, 2.58483, -0.378807)
bones/142/position = Vector3(-0.137896, 1.3828, -0.626978)
bones/143/position = Vector3(0.0180756, 3.29399, -1.24379)
bones/143/rotation = Quaternion(0.991577, 0, -0.129518, 0)
bones/143/scale = Vector3(1, 1.04115, 1)

[node name="Robot_Arms" parent="PlayerModel/Robot_Skeleton/Skeleton3D" index="2"]
material_override = SubResource("StandardMaterial3D_tk4rn")

[node name="Robot_Body" parent="PlayerModel/Robot_Skeleton/Skeleton3D" index="4"]
material_override = SubResource("StandardMaterial3D_7k1q5")

[node name="GunBone" type="BoneAttachment3D" parent="PlayerModel/Robot_Skeleton/Skeleton3D" index="5"]
transform = Transform3D(0.439203, 0.256225, -0.865116, 0.686017, 0.530237, 0.50524, 0.586218, -0.812474, 0.0569039, -0.355496, 1.21329, 0.208279)
bone_name = "hand.R"
bone_idx = 55

[node name="ShootFrom" type="Marker3D" parent="PlayerModel/Robot_Skeleton/Skeleton3D/GunBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[node name="ShootParticle" type="CPUParticles3D" parent="PlayerModel/Robot_Skeleton/Skeleton3D/GunBone/ShootFrom"]
transform = Transform3D(1, 2.04891e-08, 0, 3.21306e-08, 1, 5.58794e-09, 0, 0, 1, 0, 0, 0)
material_override = ExtResource("9")
cast_shadow = 0
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 0.79
mesh = SubResource("2")
direction = Vector3(0, 0, -1)
spread = 15.0
gravity = Vector3(0, -3, 0)

[node name="MuzzleFlash" type="CPUParticles3D" parent="PlayerModel/Robot_Skeleton/Skeleton3D/GunBone/ShootFrom"]
transform = Transform3D(1, 0, -2.00234e-08, 1.21072e-08, -4.37722e-08, -1, -2.98023e-08, 1, -4.74975e-08, 0, 0, 0)
material_override = SubResource("3")
cast_shadow = 0
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
explosiveness = 1.0
mesh = ExtResource("10")
gravity = Vector3(0, 0, 0)
scale_amount_min = 0.75
scale_amount_max = 0.75
scale_amount_curve = SubResource("6")
color = Color(0.12549, 0.627451, 1, 0.376471)

[node name="AnimationPlayer" parent="PlayerModel" index="1"]
callback_mode_process = 0

[node name="Decal" type="Decal" parent="PlayerModel"]
size = Vector3(1.5, 2, 1.5)
albedo_mix = 0.5
upper_fade = 3.63772
lower_fade = 1.0

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../AnimationTree")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../PlayerModel")
root_motion_track = NodePath("Robot_Skeleton/Skeleton3D:root")
callback_mode_process = 0
tree_root = SubResource("30")
anim_player = NodePath("../PlayerModel/AnimationPlayer")
parameters/aim/add_amount = 0.0
parameters/eye_blend/blend_amount = 1.0
parameters/land/active = false
parameters/land/internal_active = false
parameters/land/request = 0
parameters/state/current_state = "walk"
parameters/state/transition_request = ""
parameters/state/current_index = 1
parameters/strafe/blend_position = Vector2(0, 0)
parameters/strafe_speed/scale = 1.2
parameters/walk/blend_position = Vector2(0.387, 0.043)
parameters/walk_speed/scale = 1.3

[node name="SeparationRayShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.00357, 0)
shape = SubResource("32")

[node name="SoundEffects" type="Node" parent="."]

[node name="Step" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("4")

[node name="Jump" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("5")

[node name="Land" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("6")

[node name="Shoot" type="AudioStreamPlayer" parent="SoundEffects"]
stream = SubResource("35")

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="Healthbar" parent="SubViewport" instance=ExtResource("11_r1fay")]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.415, 0, 0, 0, 0.415, 0, 0, 0, 0.415, 0, 2.30703, 0)
billboard = 1
texture = SubResource("ViewportTexture_tfqnt")

[node name="Area3D" type="Area3D" parent="."]

[node name="CapsuleShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("31")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]

[editable path="PlayerModel"]
